If `disablePortConfiguration()` called, update Java side config details from OS after opening port